@@ -21,5 +21,5 @@ where 'xxx' is your username, to tell the system it should be running as you.
 3. Configuration is in ~xxx/Data.  Specifically, you need to configure
 ~xxx/Data/Command/Control.plist, ~xxx/Data/Command/Operators.plist, and
 ~xxx/Data/Command/AlertConfig.plist before the Control server will start.
-There are examples in thee same directory as this README
+There are examples in the same directory as this README
 
